Unit Tests and Sample Client